// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should call onMouseEnter and update divergence on bars 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 55.16129032258064px;
  width: 109.03846153846152px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c3 {
  fill: rgb(90,200,250);
  height: 203.2258064516129px;
  width: 109.03846153846152px;
}

.c3:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c4 {
  fill: rgb(90,200,250);
  height: 270px;
  width: 109.03846153846152px;
}

.c4:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c5 {
  fill: rgb(90,200,250);
  height: 232.25806451612902px;
  width: 109.03846153846152px;
}

.c5:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 360px;
  width: 640px;
}

.c2 {
  fill: rgb(255,255,255);
  pointer-events: none;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-20"
  size={
    Object {
      "height": 360,
      "width": 640,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 270)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 55.16129032258064,
            "width": 109.03846153846152,
          }
        }
        value="+18"
        x={20.769230769230802}
        y={214.83870967741936}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 55.16129032258064,
            "width": 109.03846153846152,
          }
        }
        textAnchor="middle"
        transform="translate(75.28846153846156, 244.83870967741936)"
      >
        +18
      </text>
      <rect
        className="bar c3"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 203.2258064516129,
            "width": 109.03846153846152,
          }
        }
        value="+69"
        x={150.5769230769231}
        y={66.7741935483871}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 203.2258064516129,
            "width": 109.03846153846152,
          }
        }
        textAnchor="middle"
        transform="translate(205.09615384615387, 96.7741935483871)"
      >
        +69
      </text>
      <rect
        className="bar c4"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 270,
            "width": 109.03846153846152,
          }
        }
        value="+92"
        x={280.38461538461536}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 270,
            "width": 109.03846153846152,
          }
        }
        textAnchor="middle"
        transform="translate(334.90384615384613, 30)"
      >
        +92
      </text>
      <rect
        className="bar c5"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 232.25806451612902,
            "width": 109.03846153846152,
          }
        }
        value="+79"
        x={410.19230769230774}
        y={37.741935483870975}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 232.25806451612902,
            "width": 109.03846153846152,
          }
        }
        textAnchor="middle"
        transform="translate(464.7115384615385, 67.74193548387098)"
      >
        +79
      </text>
    </g>
  </g>
</svg>
`;

exports[`Should remove resize event listener on unmount 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-26"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should remove resize event listener on unmount 2`] = `
<svg
  className="sc-EHOje silky-charts fEtiiL"
  id="silky-charts-bar-26"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="sc-bdVaJa axis-x bDWFJH"
      transform="translate(0, 0)"
    />
    <g
      className="sc-bdVaJa axis-y bDWFJH"
    />
    <g
      className="data"
    >
      <rect
        className="sc-ifAKCX bar fkbQPY"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="sc-ifAKCX bar fkbQPY"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="sc-ifAKCX bar fkbQPY"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="sc-ifAKCX bar fkbQPY"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-0"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly X axis label rotation 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-14"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly showing the value and divergence on bars 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

.c2 {
  fill: rgb(33,33,33);
  pointer-events: none;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-18"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        19
      </text>
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        70
      </text>
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        93
      </text>
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        80
      </text>
    </g>
  </g>
</svg>
`;

exports[`Should render correctly showing the value on bars 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

.c2 {
  fill: rgb(33,33,33);
  pointer-events: none;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-16"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        19
      </text>
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        70
      </text>
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        93
      </text>
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
      <text
        className="value c2"
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        textAnchor="middle"
        transform="translate(0, -18)"
      >
        80
      </text>
    </g>
  </g>
</svg>
`;

exports[`Should render correctly width horizontal grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c2 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c2:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-10"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly width vertical grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c2 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c2:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-12"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with dates as name 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-8"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with height 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 400px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-4"
  size={
    Object {
      "height": 400,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with width 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 90px;
  width: 400px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-2"
  size={
    Object {
      "height": 90,
      "width": 400,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with width and height 1`] = `
.c1 {
  fill: rgb(90,200,250);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.79999999999995,94.1%,53.3%);
}

.c0 {
  height: 300px;
  width: 400px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-6"
  size={
    Object {
      "height": 300,
      "width": 400,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="data"
    >
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={19}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={70}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={93}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(90, 200, 250)"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={80}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;
